Fix to set background color, white for dark mode web browser

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ html {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.7;
+  background-color: #ffffff;
 }
 
 body {
